--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         <h5>Contact Us</h5>
         <h3>Work With Us</h3>
 
-        <iframe src="https://www.google.com/maps/d/embed?mid=1n_-kl4FnmQ8Rmc7Ofl37Q-W1zEg&hl=ru" width="767" height="295">
-            Ваш браузер не поддерживает плавающие фреймы!
-        </iframe>
+        <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d381.0243563290133!2d36.21688952472996!3d50.02604598418443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a1364ac9d47f%3A0x6a65741a9f7c4986!2z0YPQuy4g0J7RgtCw0LrQsNGA0LAg0K_RgNC-0YjQsCwgMTjQkCwg0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDYxMDAw!5e0!3m2!1sru!2sua!4v1606809666251!5m2!1sru!2sua" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
 
         <div class="d-flex">
 
