--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <h5>Who we Are</h5>
         <h3>Tell The World About Yourself</h3>
-        <p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes
+        <p>Typi non habent claritatqem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes
             demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui
             sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum
             claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo
