added styles for mobile version

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
 
     <h1>Say <span>Haloa</span> to your Portfolio</h1>
+    <img src="images/arrow_down_03.png" alt="arrow" class="arrow_mobile">
 </header>
 
 <!--ABOUT_US-->
@@ -158,8 +159,8 @@
 
             <div class="item">
                 <h6>Email</h6>
-                <p>elegant@elegant.com<br>
-                    commercial@elegant.com</p>
+                <p>e@elegant.com<br>
+                    c@elegant.com</p>
             </div>
 
         </div>
